--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,11 @@ spring.sql.init.platform=h2
 spring.sql.init.mode=always
 
 # E-Mail-Konfiguration
-spring.mail.host=your-mail-host
-spring.mail.port=your-mail-port
-spring.mail.username=your-mail-username
-spring.mail.password=your-mail-password
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=moslemeobsn@gmail.com
+spring.mail.password=#Moslembsn2000#
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Administrator-E-Mail
-admin.email=admin@example.com
+
