--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.sql.init.mode=always
 # E-Mail-Konfiguration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=moslembsn@gmail.com
-spring.mail.password=ltprcqjvglzcnmqk
+spring.mail.username=moslemeo@gmail.com
+spring.mail.password=asqhcqmanbfihojr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
