auf neuen Laptop geclont.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Datenbank-Konfiguration
-spring.datasource.url=jdbc:h2:file:~/Documents/3.Semester/WebTech/s
+spring.datasource.url=jdbc:h2:file:~/Documents/Uni/WebTech
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.h2.Driver
